--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,6 @@ phases:
 reports:
   jest_reports:
     files:
-      - <report filename>
+      - report.xml
     file-format: JUNITXML
-    base-directory: <test report directory>
+    base-directory: report
