--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,13 +8,21 @@ phases:
 phases:
   pre_build:
     commands:
+      - apt-get update
+      - apt-get install -y jq
+      - wget http://www-eu.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
+      - tar xzf apache-maven-3.5.4-bin.tar.gz
+      - ln -s apache-maven-3.5.4 maven
+      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.4.0.2170-linux.zip
+      - unzip ./sonar-scanner-cli-4.4.0.2170-linux.zip
+      - export PATH=$PATH:/sonar-scanner-4.4.0.2170-linux/bin/
       - npm install
   build:
     commands:
       - npm build
       - npm test
       - mvn test  
-      - mvn sonar:sonar -Dsonar.login=929581eade2d22324e080e1c6823ed52a50f2aa2 -Dsonar.host.url=http://15.237.105.2:9000  -Dsonar.projectKey=react -Dsonar.organization=aswanth-asokan
+      - mvn sonar:sonar -Dsonar.login=e6d9b3b8241a9172307bc4fb602a299392367577 -Dsonar.host.url=http://15.237.105.2:9000  -Dsonar.projectKey=react -Dsonar.organization=aswanth-asokan
       - sleep 5
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=react >result.json
       - cat result.json
